--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://r77tchan.github.io/nk/",
   "scripts": {
     "build": "react-router build",
-    "postbuild": "cp build/client/index.html build/client/404.html",
+    "postbuild": "copy build\\client\\index.html build\\client\\404.html",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
